@@ -10,10 +10,10 @@ from setuptools import setup
 
 
 PACKAGE_NAME = "input-monitor"
-PACKAGE_VERSION = "1.0.0"
+PACKAGE_VERSION = "1.0.1"
 MAINTAINER = "Morning Team"
 MAINTAINER_EMAIL = "no-reply@morning.team"
-URL = "https://morning.team"
+URL = "https://github.com/aswna/input_monitor"
 
 
 setup(
